kubernetes-templating/frontend/templates/ingress.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: shop.xxx.nip.io
  namespace: hipster-shop
  labels:
    app: frontend
  annotations:
    #nginx.ingress.kubernetes.io/rewrite-target: /
    certmanager.k8s.io/acme-challenge-type: http01
    certmanager.k8s.io/cluster-issuer: letsencrypt-production
    ingress.kubernetes.io/proxy-body-size: "0"
    kubernetes.io/ingress.class: nginx
    kubernetes.io/tls-acme: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    #ingress.kubernetes.io/rewrite-target: /

spec:
  rules:
  - host: shop.34.89.193.23.nip.io
    http:
      paths:
      - path: /
        backend:
          serviceName: frontend
          servicePort: 80
  tls:
  - hosts:
    - shop.34.89.193.23.nip.io
    secretName: shop.xxx.nip.io
